Login and signup page added

--- a/src/App.css
+++ b/src/App.css
@@ -9,10 +9,8 @@ body{
     outline: none;
     background: rgb(146, 150, 152);
      background-image: url("./assets/bg1.webp"); 
+     background-repeat: no-repeat;
+     background-size: cover;
+
 }
 
-.LoginForm{
-    text-align: center;
-    font-size: larger;
-    
-}
