--- a/src/components/HomePage/Home.css
+++ b/src/components/HomePage/Home.css
@@ -16,3 +16,9 @@
 .text{
 text-align: center;
 }
+
+@media (max-width: 850px){
+    .grid{
+        grid-template-columns:repeat(2,1fr)
+    }
+    }
