--- a/src/components/HomePage/Home.css
+++ b/src/components/HomePage/Home.css
@@ -5,7 +5,7 @@
 
 .grid{
     display: grid;
-    grid-template-columns: repeat(4,1fr);
+    grid-template-columns: repeat(auto-fit,minmax(250px,1fr));
     grid-gap: 0.1em;
     justify-content: center;
 }
@@ -17,8 +17,3 @@
 text-align: center;
 }
 
-@media (max-width: 850px){
-    .grid{
-        grid-template-columns:repeat(2,1fr)
-    }
-    }
